fix: flex-wrap for avatar container

--- a/docs/docs.css
+++ b/docs/docs.css
@@ -167,6 +167,7 @@ iframe {
 .avatar-con {
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 /* media queries */
